<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nativeads"
    android:background="@color/igblue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



<!--        <TextView-->
<!--            android:id="@+id/ad_display_form"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
<!--            android:layout_marginTop="@dimen/activity_vertical_margin"-->
<!--            android:layout_marginRight="@dimen/activity_horizontal_margin"-->
<!--            android:text="CHOOSE DESIRED AD"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="@dimen/hiad_text_16_sp"-->
<!--            />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radio_group_display_form"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <RadioButton
                    android:id="@+id/radio_button_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/large" />

                <RadioButton
                    android:id="@+id/radio_button_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/small" />

                <RadioButton
                    android:id="@+id/radio_button_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_load"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="GENERATE AD"
                android:backgroundTint="@color/transparent"
                android:textColor="@color/white"/>
        </LinearLayout>


        <ScrollView
            android:id="@+id/scroll_view_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="To know about Market Prices,
Click on necessary choices below."
            android:textColor="@color/White"
            android:textSize="25dp" />

        <Button
            android:id="@+id/cp"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:backgroundTint="@color/agkhaki"
            android:fontFamily="@font/happy_monkey"

            android:text="Commodity-Wise"
            android:textColor="@color/black"
            android:textSize="19sp"
            />

        <Button
            android:id="@+id/mkp"
            android:layout_width="234dp"
            android:backgroundTint="@color/agkhaki"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/happy_monkey"
            android:layout_marginBottom="172dp"
            android:text="Market-Wise"
            android:textColor="@color/black"
            android:textSize="19sp" />


    </LinearLayout>

</ScrollView>